--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="SITE AMOR SEM FIM">
         <meta name="author" content="ROBISON PEREIRA MACHADO">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/layout.css">
     </head>
     <body>
        
