--- a/index.html
+++ b/index.html
@@ -20,21 +20,31 @@
     </head>
     <body>
 
-    <div class="container">
+    <div class="container principal">
 
-        <div class="row">
-      <div class="col s1">1</div>
-      <div class="col s1">2</div>
-      <div class="col s1">3</div>
-      <div class="col s1">4</div>
-      <div class="col s1">5</div>
-      <div class="col s1">6</div>
-      <div class="col s1">7</div>
-      <div class="col s1">8</div>
-      <div class="col s1">9</div>
-      <div class="col s1">10</div>
-      <div class="col s1">11</div>
-      <div class="col s1">12</div>
+        <div class="col site-content">
+
+          <div class="row top-header">
+
+            <div class="col s1">
+
+                <div class="logo">
+                    <p>Amor sem fim</p>
+                    <p>floricultura</p>
+                </div>
+
+                <img src="images/flores-1.png" alt="flores" />
+            
+            </div>
+            <div class="col s1"></div>
+            <div class="col s1"></div>
+
+            
+          </div>
+
+
+        </div>
+
     </div>
 
 
