iniciando seção com imagens das celebrações

--- a/index.html
+++ b/index.html
@@ -65,8 +65,35 @@
             </div>
 
 
+        </div>
 
+        <div class="row celebracoes blue lighten-3">
 
+            <div class="col s12">
+                <p>O que vamos celebrar hoje?</p>
+                <p>mande um presentinho e garanta o sorriso daquele alguém especial</p>
+            </div>
+
+            <div class="cards-group col s12">
+
+                <div class="linha">
+
+                    <div class="card-celebracao">
+                        <img src="images/card-image-1.png" alt="celebração 1">
+                    </div>
+                    <div class="card-celebracao">
+                        <img src="images/card-image-2.png" alt="celebração 2">
+                    </div>
+                    <div class="card-celebracao">
+                        <img src="images/card-image-3.png" alt="celebração 3">
+                    </div>
+                    <div class="card-celebracao">
+                        <img src="images/card-image-4.png" alt="celebração 4">
+                    </div>
+
+                </div>
+
+            </div>
 
 
         </div>
