finalizando seção com imagens das celebrações

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         </div>
 
-        <div class="row celebracoes blue lighten-3">
+        <div class="row celebracoes ">
 
             <div class="col s12">
                 <p>O que vamos celebrar hoje?</p>
@@ -78,17 +78,37 @@
 
                 <div class="linha">
 
-                    <div class="card-celebracao">
+                    <div class="card-celebracao z-depth-3">
                         <img src="images/card-image-1.png" alt="celebração 1">
+                        <div class="action">
+                            <p class="alvo">Para seu amor</p>
+                            <a class="waves-effect waves-light">Fazer pedido</a>
+                        </div>
                     </div>
-                    <div class="card-celebracao">
+
+                    <div class="card-celebracao z-depth-3">
                         <img src="images/card-image-2.png" alt="celebração 2">
+                        <div class="action">
+                            <p class="alvo">Para seus amigos</p>
+                            <a class="waves-effect waves-light">Fazer pedido</a>
+                        </div>
+
                     </div>
-                    <div class="card-celebracao">
+
+                    <div class="card-celebracao z-depth-3">
                         <img src="images/card-image-3.png" alt="celebração 3">
+                        <div class="action">
+                            <p class="alvo">Para sua família</p>
+                            <a class="waves-effect waves-light">Fazer pedido</a>
+                        </div>
                     </div>
-                    <div class="card-celebracao">
+
+                    <div class="card-celebracao z-depth-3">
                         <img src="images/card-image-4.png" alt="celebração 4">
+                        <div class="action">
+                            <p class="alvo">Saudades de alguém</p>
+                            <a class="waves-effect waves-light">Fazer pedido</a>
+                        </div>
                     </div>
 
                 </div>
